--- a/pre_flat.css
+++ b/pre_flat.css
@@ -1,6 +1,6 @@
 /*
  * Made by Tsartsaris Sotirios 
- * http://tsartsaris.gr/free_google_code_prettify_flat_theme_css
+ * http://www.tsartsaris.gr/Free-google-code-prettify-flat-theme-css
  * Free for use, free for all. Cheers.
  */
 @import url(http://fonts.googleapis.com/css?family=Varela+Round);
